--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
     },
     "scripts": {
         "start": "node index.js"
+    },
+    "dependencies": {
+        "websocket": "^1.0.26"
     }
 }
